need to fix toggle bar

--- a/i.html
+++ b/i.html
@@ -3,10 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML CSS BOOTSTRAP 11092023</title>
+    <title>FASHION LIFESTYLE HTML CSS BOOTSTRAP 11092023</title>
     <link rel="stylesheet" href="s.css">
+    <!-- BOOTSTRAP CODE -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a09ac47364.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <section class="header">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid"> <!-- Use container-fluid to make it full-width -->
+                <a class="navbar-brand" href="#"><img src="images/fashion-logo.jpg" alt=""></a>
+                <!-- Use data-bs-toggle and data-bs-target with Bootstrap 5 classes -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse mf-auto" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">POLICY</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONDITION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">DOWNLOAD</a>
+                        </li>
+                    </ul>
+                    <ul class="right-menu">
+                        <li><i class="fa fa-facebook"></i></li>
+                        <li><i class="fa fa-instagram"></i></li>
+                        <li><i class="fa fa-pinterest"></i></li>
+                        <li>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="SEARCH">
+                                <div class="input-group-append">
+                                    <span id="search-icon-box"  class="input-group-text form-control"><i class="fa fa-search form-control" id="search-icon"></i></span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </section>
     
 </body>
 </html>
